<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CozyAndroidActivity!</string>
    <string name="tabListe">Recherche</string>
    <string name="tabCalendrier">Historique</string>
    <string name="tabPlus">Nouvelle</string>
    <string name="tabDossier">Navigateur</string>
    <string name="tabRecherche">Recherche</string>
    <string name="nameNewNote"></string>
    <string name="titreNote">Titre</string>
    <string name="titreTag">Titre</string>
    <string name="sousTitreNote"></string>
    <string name="path">Navigateur</string>
    <string name="search_label_dossier">AAA</string>
    <string name="search_hint">Rechercher des notes</string>
    <string name="search_hint_dossier">Rechercher un dossier</string>
    <string name="dossier_vide">Ce dossier est vide.</string>
    <string name="suppr_dossier">Supprimer ce dossier</string>
    <string name="creer_dossier">Creer un dossier</string>
    <string name="creer_note">Creer une note</string>
    <string name="hint_creer">Nom du nouveau dossier</string>
    <string name="confirm_creer">Creer</string>
    
    <string name="app_name">Cozy Android</string>
    <string name="startup_message">Starting Couchbase Mobile</string>
    <string name="add_item_hint">Add Item</string>
    <string name="error_dialog_title">Couchbase Error</string>
    <string name="error_dialog_button">Exit</string>
    
    <string-array name="sort_array">
        <item>Pertinence</item>
        <item>Chemin</item>
        <item>Date modification</item>
    </string-array>
    <string name="sort">Tri : Pertinence | Chemin | Date modification</string>
    <string name="InfosNote">Informations sur la note</string>
    


</resources>